opam-version: "2.0"
name: "coq-bootstrapping-verified"
version: "dev"
synopsis: "Verified irreducibility of FHE bootstrapping circuit depth"
description: """
Machine-checked proof that any fan-in-2 circuit computing the NTT
over cyclotomic rings Z[X]/(X^N+1) with N = 2^k has depth at least k.
Formalized over MathComp's algebraic hierarchy with zero axioms.
"""
maintainer: "Charles C. Norton <machineelv@gmail.com>"
authors: ["Charles C. Norton"]
license: "MIT"
homepage: "https://github.com/CharlesCNorton/bootstrapping-verified"
bug-reports: "https://github.com/CharlesCNorton/bootstrapping-verified/issues"
dev-repo: "git+https://github.com/CharlesCNorton/bootstrapping-verified.git"

depends: [
  "rocq-core" {>= "9.0" & < "9.1~"}
  "coq-mathcomp-ssreflect" {>= "2.5"}
  "coq-mathcomp-algebra" {>= "2.5"}
  "coq-mathcomp-reals" {>= "2.5"}
]

build: [
  [make "-j%{jobs}%"]
]
install: [make "install"]

tags: [
  "keyword:FHE"
  "keyword:bootstrapping"
  "keyword:NTT"
  "keyword:circuit complexity"
  "keyword:formal verification"
  "keyword:MathComp"
  "category:Computer Science/Cryptography"
  "logpath:Bootstrapping"
]
