opam-version: "2.0"
name: "coq-bootstrapping-verified"
version: "dev"
synopsis: "Fan-in-2 depth lower bounds and staged shared-network transforms for bootstrapping"
description: """
Machine-checked formalization of fan-in-2 full-dependence lower bounds,
staged shared-network transforms, circuit compilation, abstract
bootstrapping shells, and execution-model corollaries over MathComp's
algebraic hierarchy, structured by the theorem program recorded in
TODO.md.
"""
maintainer: "Charles C. Norton <machineelv@gmail.com>"
authors: ["Charles C. Norton"]
license: "MIT"
homepage: "https://github.com/CharlesCNorton/bootstrapping-verified"
bug-reports: "https://github.com/CharlesCNorton/bootstrapping-verified/issues"
dev-repo: "git+https://github.com/CharlesCNorton/bootstrapping-verified.git"

depends: [
  "rocq-core" {= "9.0.0"}
  "coq-mathcomp-ssreflect" {= "2.5.0"}
  "coq-mathcomp-algebra" {= "2.5.0"}
  "coq-mathcomp-reals" {= "1.15.0"}
]

build: [
  [make "-j%{jobs}%"]
]
install: [make "install"]

tags: [
  "keyword:FHE"
  "keyword:bootstrapping"
  "keyword:NTT"
  "keyword:circuit complexity"
  "keyword:formal verification"
  "keyword:MathComp"
  "category:Computer Science/Cryptography"
  "logpath:Bootstrapping"
]
